fix alignment

--- a/style.css
+++ b/style.css
@@ -82,9 +82,12 @@ ul {
 
 .container-recent {
   display: grid;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 52px;
+}
+
+.container-recent > .grid-project {
+  background-color: #d0d9d4;
+  border-radius: 8px;
+  margin: 24px; 
 }
 
 .grid-project {
@@ -94,12 +97,6 @@ ul {
   padding-right: 1.5px;
   padding-bottom: 1.5px;
   padding-top: 252px;
-}
-
-.container-recent > .grid-project {
-  background-color: #d0d9d4;
-  border-radius: 8px;
-  margin-top: 10px;
 }
 
 .multi-post {
@@ -143,13 +140,11 @@ ul {
   column-gap: 10px;
   margin-top: 8px;
   justify-content: center;
+  padding: 0;
 }
 
 .grid-frame-skill {
-  grid-area: auto;
-  grid-gap: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+    grid-area: auto; 
 }
 
 .language-background {
@@ -163,9 +158,24 @@ ul {
 }
 
 .recent-work {
-  text-align: center;
-  font-weight: 700px;
-  font-size: 40px;
+  margin-left: 26px;
+  margin-right: 22px;
+  justify-content: center;  
+  font-weight: bold;
+  font-size: 40px;  
+}
+
+.dash-flex { 
+ color: #36b37e;
+justify-content: center;
+}
+
+.dash {
+  font-size: 40px;  
+}
+
+.dash:hover {
+  color: #1e488f;
 }
 
 .about-container {
@@ -183,7 +193,8 @@ ul {
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
-  padding-bottom: 32px;
+  padding-left: 0;
+  padding-bottom: 16px;
 }
 
 .about-message {
@@ -198,10 +209,9 @@ ul {
 }
 
 .grid-frame-skill > .grid-child-frame-skill {
-  background-color: #d0d9d4;
+  background-color: #c1c7d0;
   border-radius: 8px;
-  text-align: center;
-  margin-top: 10px;
+  text-align: center; 
 }
 
 .frame-skill-background {
